# ImageConvolve

./: .gitignore  ImageConvolution.sln  ReadMe.md  meson.build
ImageConvolution/: Canvas.cpp  Canvas.h  Convolve.cpp  Convolve.cu  Convolve.cuh  Convolve.h  ImageConvolution.vcxproj  ImageConvolution.vcxproj.filters  conv.cu  conv.cuh  imageconvolution.cpp  imageconvolution.h  imageconvolution.qrc  imageconvolution.ui  kernel.ui  main.cpp
ImageConvolution/GeneratedFiles/: qrc_imageconvolution.cpp  ui_imageconvolution.h  ui_kernel.h
src/: Canvas.cpp  Canvas.h  Convolve.cpp  Convolve.h  conv.cu  conv.cuh
